deixando o código explicado para consultas futuras e anotações importantes

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <title>Funcionarios</title>
 </head>
 <body>
+    <!-- criando a div que vai aparecer os cards, sem essa div não seria possivel a estilização e criação atraves do js e css -->
     <div class="funcionarios" id="funcionarios">
     </div>
-    
+
 </body>
 </html>
+
+<!-- HTML: Fornece a estrutura básica, a "tela" onde os elementos serão colocados.
+
+JavaScript: Usa o id da div para encontrar a "tela" e dinamicamente criar e inserir os cartões de funcionários.
+
+CSS: Usa a classe da div para estilizar a forma como os cartões (os elementos "filhos") se organizam no layout. -->
